Initial commit with local changes

--- a/TownOfHost.csproj
+++ b/TownOfHost.csproj
@@ -7,11 +7,12 @@
 		<Authors>tukasa0001(EmptyBottle), integral0131, yumenopai</Authors>
 		<langVersion>preview</langVersion>
 		<NoWarn>MSB3246</NoWarn>
-		<PackageId>TownOfHost_Y</PackageId>
+		<PackageId>TownOfHost_Y ForkedbyTabasco</PackageId>
 		<Company>tukasa0001(EmptyBottle), integral0131, yumenopai</Company>
 		<Product>TownOfHost_Y</Product>
-		<AssemblyName>TownOfHost_Y</AssemblyName>
-		<RootNamespace>TownOfHost_Y</RootNamespace>
+		<AssemblyName>TownOfHost_Y ForkedbyTabasco</AssemblyName>
+		<RootNamespace>TownOfHost_Y ForkedbyTabasco</RootNamespace>
+		<AmongUs>C:\Program Files (x86)\Steam\steamapps\common\TownOfHost_Y</AmongUs>
 	</PropertyGroup>
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
 		<DefineConstants>TRACE</DefineConstants>
