--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "TownOfHostY": {
       "commandName": "Executable",
-      "executablePath": "C:\\Program Files (x86)\\Steam\\steamapps\\common\\Among Us_TOH_Y - dev\\Among Us.exe"
+      "executablePath": "C:\\Program Files (x86)\\Steam\\steamapps\\common\\TownOfHost_Y\\Among Us.exe"
     }
   }
 }
