--- a/TownOfHost.csproj
+++ b/TownOfHost.csproj
@@ -3,16 +3,22 @@
 		<TargetFramework>net6.0</TargetFramework>
 		<GenerateAssemblyFileVersionAttribute>false</GenerateAssemblyFileVersionAttribute>
 		<GenerateAssemblyInformationalVersionAttribute>false</GenerateAssemblyInformationalVersionAttribute>
-		<Description>Town Of Host_Y</Description>
-		<Authors>tukasa0001(EmptyBottle), integral0131, yumenopai</Authors>
+		<Description>Town Of Host_Y ForkedbyTabasco</Description>
+		<Authors>tukasa0001(EmptyBottle), integral0131, yumenopai,Tabasco</Authors>
 		<langVersion>preview</langVersion>
 		<NoWarn>MSB3246</NoWarn>
 		<PackageId>TownOfHost_Y ForkedbyTabasco</PackageId>
-		<Company>tukasa0001(EmptyBottle), integral0131, yumenopai</Company>
-		<Product>TownOfHost_Y</Product>
+		<Company>tukasa0001(EmptyBottle), integral0131, yumenopai,Tabasco</Company>
+		<Product>TownOfHost_Y ForkedbyTabasco</Product>
 		<AssemblyName>TownOfHost_Y ForkedbyTabasco</AssemblyName>
 		<RootNamespace>TownOfHost_Y ForkedbyTabasco</RootNamespace>
-		<AmongUs>C:\Program Files (x86)\Steam\steamapps\common\TownOfHost_Y</AmongUs>
+		
+		<AmongUs>D:\Application\Steam\steamapps\common\TownOfHost_Y</AmongUs>
+
+		<SteamTemp>D:\Among Us\TownOfHost_Y\TownOfHost_Y-ForkedbyTabasco_Steam</SteamTemp>
+		<EpicTemp>D:\Among Us\TownOfHost_Y\TownOfHost_Y-ForkedbyTabasco_Epic</EpicTemp>
+		<DllTemp>D:\Among Us\TownOfHost_Y</DllTemp>
+		
 	</PropertyGroup>
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
 		<DefineConstants>TRACE</DefineConstants>
@@ -38,6 +44,17 @@
 	</ItemGroup>
 
 	<Target Name="Copy" AfterTargets="Build" Condition="'$(AmongUs)' != ''">
-		<Copy SourceFiles="$(OutputPath)$(AssemblyName).dll" DestinationFolder="$(AmongUs)/BepInEx/plugins/" Condition="'$(Configuration)' == 'Debug'" />
+		<Copy
+		  SourceFiles="$(OutputPath)$(AssemblyName).dll"
+		  DestinationFolder="$(AmongUs)\BepInEx\plugins\" />
+		<Copy
+		  SourceFiles="$(OutputPath)$(AssemblyName).dll"
+		  DestinationFolder="$(SteamTemp)\BepInEx\plugins\" />
+		<Copy
+		  SourceFiles="$(OutputPath)$(AssemblyName).dll"
+		  DestinationFolder="$(EpicTemp)\BepInEx\plugins\" />
+		<Copy
+		SourceFiles="$(OutputPath)$(AssemblyName).dll"
+		DestinationFolder="$(DllTemp)\" />
 	</Target>
 </Project>
