change name to TOH_Y

--- a/TownOfHost.csproj
+++ b/TownOfHost.csproj
@@ -3,15 +3,15 @@
 		<TargetFramework>net6.0</TargetFramework>
 		<GenerateAssemblyFileVersionAttribute>false</GenerateAssemblyFileVersionAttribute>
 		<GenerateAssemblyInformationalVersionAttribute>false</GenerateAssemblyInformationalVersionAttribute>
-		<Description>Town Of Host_Y ForkedbyTabasco</Description>
-		<Authors>tukasa0001(EmptyBottle), integral0131, yumenopai,Tabasco</Authors>
+		<Description>Town Of Host_Y</Description>
+		<Authors>tukasa0001(EmptyBottle), integral0131, yumenopai</Authors>
 		<langVersion>preview</langVersion>
 		<NoWarn>MSB3246</NoWarn>
-		<PackageId>TownOfHost_Y ForkedbyTabasco</PackageId>
-		<Company>tukasa0001(EmptyBottle), integral0131, yumenopai,Tabasco</Company>
-		<Product>TownOfHost_Y ForkedbyTabasco</Product>
-		<AssemblyName>TownOfHost_Y ForkedbyTabasco</AssemblyName>
-		<RootNamespace>TownOfHost_Y ForkedbyTabasco</RootNamespace>
+		<PackageId>TownOfHost_Y</PackageId>
+		<Company>tukasa0001(EmptyBottle), integral0131, yumenopai</Company>
+		<Product>TownOfHost_Y</Product>
+		<AssemblyName>TownOfHost_Y</AssemblyName>
+		<RootNamespace>TownOfHost_Y</RootNamespace>
 		
 		<AmongUs>D:\Among Us\common\TownOfHost_Y -Dev</AmongUs>
 
