--- a/TownOfHost.csproj
+++ b/TownOfHost.csproj
@@ -4,14 +4,14 @@
 		<GenerateAssemblyFileVersionAttribute>false</GenerateAssemblyFileVersionAttribute>
 		<GenerateAssemblyInformationalVersionAttribute>false</GenerateAssemblyInformationalVersionAttribute>
 		<Description>Town Of Host_Y-ForkedbyTabasco</Description>
-		<Authors>tukasa0001(EmptyBottle), integral0131, yumenopai,Tabasco</Authors>
+		<Authors>tukasa0001(EmptyBottle), integral0131, yumenopai</Authors>
 		<langVersion>preview</langVersion>
 		<NoWarn>MSB3246</NoWarn>
-		<PackageId>TownOfHost_Y</PackageId>
+		<PackageId>TownOfHost_Y-ForkedbyTabasco</PackageId>
 		<Company>tukasa0001(EmptyBottle), integral0131, yumenopai</Company>
-		<Product>TownOfHost_Y</Product>
-		<AssemblyName>TownOfHost_Y</AssemblyName>
-		<RootNamespace>TownOfHost_Y</RootNamespace>
+		<Product>TownOfHost_Y-ForkedbyTabasco</Product>
+		<AssemblyName>TownOfHost_Y-ForkedbyTabasco</AssemblyName>
+		<RootNamespace>TownOfHost_Y-ForkedbyTabasco</RootNamespace>
 
 		<AmongUs>C:\Program Files (x86)\Steam\steamapps\common\TownOfHost_Y -Dev</AmongUs>
 
